Removed the hover classes for now and added border gradients.

--- a/css/blink.css
+++ b/css/blink.css
@@ -67,3 +67,8 @@
 /* Backgrounds */
 
 @import "modules/background-image.css";
+@import "modules/border-image.css";
+
+/* Other */
+
+@import "modules/opacity.css";
