Added brown color and fixed spelling.

--- a/css/modules/background-color.css
+++ b/css/modules/background-color.css
@@ -46,6 +46,10 @@
     background-color: hsl(330, 90%, 60%)
 }
 
+.bgc\:brown {
+    background-color: hsl(30, 60%, 45%)
+}
+
 .bgc\:t {
     background-color: transparent
 }
