--- a/css/modules/background-image.css
+++ b/css/modules/background-image.css
@@ -45,3 +45,8 @@
 .bgi\:pink {
     background-image: linear-gradient(15deg, hsl(330, 90%, 60%) 50%, hsl(300, 85%, 75%))
 }
+
+
+.bgi\:brown {
+	background-image: linear-gradient(15deg, hsl(30, 60%, 45%) 50%, hsl(50, 100%, 50%))
+}
