--- a/css/blank.css
+++ b/css/blank.css
@@ -44,6 +44,8 @@ html {
     /* › using default system font */
     border-style: solid;
     height: 100%;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	/* › automatically hide scrollbars in Edge, IE10/11 */
 }
 
 
