Simplified hover styles.

--- a/css/blink.css
+++ b/css/blink.css
@@ -57,6 +57,7 @@
 @import "modules/border-width.css";
 @import "modules/border-radius.css";
 @import "modules/box-shadow.css";
+@import "modules/box-shadow_hover.css";
 
 /* Colors */
 
