--- a/css/layout.css
+++ b/css/layout.css
@@ -1,25 +1,27 @@
 header>h2 {
-    margin-top: var(--2);
+    margin-top: 2rem;
 }
 
 article {
-    padding: var(--2);
+    padding: 2rem;
+}
+
+article>* {
+    margin-bottom: 1rem;
 }
 
 article:last-of-type {
-    padding-bottom: var(--8);
+    padding-bottom: 8rem;
 }
 
 article:nth-child(odd) {
-    background-color: var(--darken);
+    background-color: hsla(0, 0%, 90%, .5);
 }
 
-article>header>h3 {
-    display: inline-block;
-    background-color: var(--color-text);
-    color: var(--bg-color);
-    padding: var(--1);
-    font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace
+code {
+    font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace;
+    background-color: hsla(0, 0%, 0%, .0625);
+    padding: .25rem;
 }
 
 
