--- a/css/blank_minimal.css
+++ b/css/blank_minimal.css
@@ -1,11 +1,12 @@
 html {
+    border-style: solid;
+    /*
     box-sizing: border-box;
     font-size: 1rem;
     line-height: 1.5;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", sans-serif;
     border-width: 0;
-    border-style: solid;
-    height: 100%;
+    height: 100%;*/
 }
 
 *, *::before, *::after {
@@ -28,10 +29,8 @@ html {
 body {
     min-height: 100%;
     font-size: 100%;
-    margin: 0;
 }
 
 img, video, audio, iframe {
     max-width: 100%;
-    height: auto;
 }
