--- a/css/blank.css
+++ b/css/blank.css
@@ -22,6 +22,8 @@ GLOBAL ADJUSTMENTS
     --16: calc(16 * var(--1));
     --transition-short: .125s all ease-in-out;
     --box-shadow: 0 var(--\.0625) var(--\.25) 0 hsla(0, 0%, 15%, .125);
+    --sansfont: system-ui;
+    --monofont: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace;
 }
 
 
@@ -40,7 +42,7 @@ html {
     font-size: 1rem;
     /* › 1rem translates to 16px in most browsers – unless the user has adjusted the default font-size to be larger or smaller  */
     line-height: 1.5;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--sansfont);
     /* › using default system font */
     border-style: solid;
     height: 100%;
@@ -282,7 +284,7 @@ nav ul li::before {
 /* Code: */
 
 pre, code, samp, kbd {
-    font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace;
+    font-family: var(--monofont);
 }
 
 code, samp, kbd {
