--- a/css/layout.css
+++ b/css/layout.css
@@ -26,6 +26,7 @@ code {
 }
 
 a {
+  color: currentColor;
   text-decoration: none;
 }
 
@@ -41,6 +42,10 @@ a:focus {
 hr {
   border-bottom: thin solid;
   margin: 2rem 0;
+}
+
+svg {
+  fill: currentColor;
 }
 
 /* Page fade-in effect: */
